samples/_failures_safe/1761619023_8e1e45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_265f4a3d.c: In function ‘graph_dijkstra’:
./samples/SAFE/__tmp_265f4a3d.c:155:5: error: expected expression at end of input
  155 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_265f4a3d.c:155:5: error: expected declaration or statement at end of input
